--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.2",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
+    "rc-slider": "^9.7.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.9"
+    "@types/leaflet": "^1.7.9",
+    "@types/lodash": "^4.14.178"
   }
 }
